--- a/.github/workflows/Build_Database.yml
+++ b/.github/workflows/Build_Database.yml
@@ -55,8 +55,8 @@ jobs:
           mkdir -p /home/runner/Release/Playerbots
           cp -r "${{ env.ROOT_DIR }}"/data/* /home/runner/Release/Azerothcore
           cp -r "${{ env.ROOT_DIR }}"/modules/mod-playerbots/data/* /home/runner/Release/Playerbots
-          tar -czvf "Database-${{ steps.ts.outputs.utc }}.tar.gz" -C /home/runner Release
-          echo "name=Database-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
+          tar -czvf "Database-${{ steps.ts.outputs.utcs }}.tar.gz" -C /home/runner Release
+          echo "name=Database-${{ steps.ts.outputs.utcs }}.tar.gz" >> $GITHUB_OUTPUT
           
       - name: 创建上传Release
         uses: ncipollo/release-action@v1
