--- a/.github/workflows/Playerbots-Linux_x64.yml
+++ b/.github/workflows/Playerbots-Linux_x64.yml
@@ -100,7 +100,7 @@ jobs:
          token: ${{ secrets.BUILD_AZEROTHCORE }}
          replacesArtifacts: true
 
-      - name: 保留最新6个Release
+      - name: 清理旧Release
         uses: dev-drprasad/delete-older-releases@v0.3.4
         with:
            keep_latest: 6
