--- a/.github/workflows/Playerbots-Linux_x64.yml
+++ b/.github/workflows/Playerbots-Linux_x64.yml
@@ -89,7 +89,7 @@ jobs:
           tar -czvf "Playerbots_linux_x64-${{ steps.ts.outputs.utcs }}.tar.gz" -C /home/runner Release
           echo "name=Playerbots_linux_x64-${{ steps.ts.outputs.utcs }}.tar.gz" >> $GITHUB_OUTPUT
           
-      - name: 创建Release并上传资产
+      - name: 创建Release并上传
         uses: ncipollo/release-action@v1
         with:
          tag: "Playerbots_Linux-x64_${{ steps.ts.outputs.utcs }}"
