--- a/.github/workflows/Build_Database.yml
+++ b/.github/workflows/Build_Database.yml
@@ -51,23 +51,23 @@ jobs:
       - name: 复制文件打包
         id: package
         run: |
-          mkdir -p /home/runner/Database/Azerothcore
-          mkdir -p /home/runner/Database/Azerothcore/modules/mod-playerbots
-          cp -r "${{ env.ROOT_DIR }}"/data/* /home/runner/Database/Azerothcore/
-          cp -r "${{ env.ROOT_DIR }}"/modules/mod-playerbots/data/* /home/runner/Database/Azerothcore/modules/mod-playerbots/
-          tar -czvf "Database-${{ steps.ts.outputs.utcs }}.tar.gz" -C /home/runner Database
-          echo "name=Database-${{ steps.ts.outputs.utcs }}.tar.gz" >> $GITHUB_OUTPUT
+          mkdir -p /home/runner/Database/Azerothcore/data
+          mkdir -p /home/runner/Database/Azerothcore/modules/mod-playerbots/data
+          cp -r "${{ env.ROOT_DIR }}"/data/* /home/runner/Database/Azerothcore/data/
+          cp -r "${{ env.ROOT_DIR }}"/modules/mod-playerbots/data/* /home/runner/Database/Azerothcore/modules/mod-playerbots/data/
+          tar -czvf "DataBase_${{ steps.ts.outputs.utcs }}.tar.gz" -C /home/runner Database
+          echo "name=DataBase_${{ steps.ts.outputs.utcs }}.tar.gz" >> $GITHUB_OUTPUT
           
       - name: 创建上传Release
         uses: ncipollo/release-action@v1
         with:
-         tag: "Database_${{ steps.ts.outputs.utcs }}"
-         name: "Database_${{ steps.ts.outputs.utcs }}"
+         tag: "DataBase_${{ steps.ts.outputs.utcs }}"
+         name: "DataBase_${{ steps.ts.outputs.utcs }}"
          body: |
-              ### Database_${{ steps.ts.outputs.utcs }}
-                 - 复制到以下位置，设置mysql环境，运行服务器将自动导入数据：
-                        - Linux：/home/runner/work/azerothcore/azerothcore/
-                        - Windows：D:\a\azerothcore\azerothcore\
+              ### DataBase_${{ steps.ts.outputs.utcs }}
+                 - 下载数据库解压，复制到以下位置(如果没有相应文件夹，需要您手动创建)，开始设置mysql环境，运行服务器将自动导入数据：
+                        - Linux：/home/runner/work/build_azerothcore/build_azerothcore/
+                        - Windows：D:\a\build_azerothcore\build_azerothcore\
          artifacts: "./${{ steps.package.outputs.name }}"
          token: ${{ secrets.BUILD_AZEROTHCORE }}
          replacesArtifacts: true
