--- a/.github/workflows/Azerothcore-Linux_x64.yml
+++ b/.github/workflows/Azerothcore-Linux_x64.yml
@@ -1,6 +1,9 @@
 name: Azerothcore-Linux_x64
 on:
   workflow_dispatch:
+  schedule:
+    - cron: 0 18 * * *
+    - cron: 0 6 * * *
     
 jobs:
   build:
